cleanup gitignore for dw

--- a/.gitignore
+++ b/.gitignore
@@ -4,48 +4,4 @@
 # Build stuff
 node_modules
 reports
-app/_notes/dwsync.xml
-app/css/_notes/dwsync.xml
-app/css/directives/_notes/dwsync.xml
-app/img/_notes/dwsync.xml
-app/js/_notes/dwsync.xml
-app/js/controllers/_notes/dwsync.xml
-app/js/directives/_notes/dwsync.xml
-app/js/filters/_notes/dwsync.xml
-app/js/services/_notes/dwsync.xml
-app/lib/angular/_notes/dwsync.xml
-app/lib/bootstrap/_notes/dwsync.xml
-app/lib/flot/_notes/dwsync.xml
-app/lib/flot/examples/_notes/dwsync.xml
-app/lib/flot/examples/ajax/_notes/dwsync.xml
-app/lib/flot/examples/annotating/_notes/dwsync.xml
-app/lib/flot/examples/axes-interacting/_notes/dwsync.xml
-app/lib/flot/examples/axes-multiple/_notes/dwsync.xml
-app/lib/flot/examples/axes-time-zones/_notes/dwsync.xml
-app/lib/flot/examples/axes-time-zones/tz/_notes/dwsync.xml
-app/lib/flot/examples/axes-time/_notes/dwsync.xml
-app/lib/flot/examples/basic-options/_notes/dwsync.xml
-app/lib/flot/examples/basic-usage/_notes/dwsync.xml
-app/lib/flot/examples/canvas/_notes/dwsync.xml
-app/lib/flot/examples/categories/_notes/dwsync.xml
-app/lib/flot/examples/image/_notes/dwsync.xml
-app/lib/flot/examples/interacting/_notes/dwsync.xml
-app/lib/flot/examples/navigate/_notes/dwsync.xml
-app/lib/flot/examples/percentiles/_notes/dwsync.xml
-app/lib/flot/examples/realtime/_notes/dwsync.xml
-app/lib/flot/examples/resize/_notes/dwsync.xml
-app/lib/flot/examples/selection/_notes/dwsync.xml
-app/lib/flot/examples/series-errorbars/_notes/dwsync.xml
-app/lib/flot/examples/series-pie/_notes/dwsync.xml
-app/lib/flot/examples/series-toggle/_notes/dwsync.xml
-app/lib/flot/examples/series-types/_notes/dwsync.xml
-app/lib/flot/examples/shared/jquery-ui/_notes/dwsync.xml
-app/lib/flot/examples/stacking/_notes/dwsync.xml
-app/lib/flot/examples/symbols/_notes/dwsync.xml
-app/lib/flot/examples/threshold/_notes/dwsync.xml
-app/lib/flot/examples/tracking/_notes/dwsync.xml
-app/lib/flot/examples/visitors/_notes/dwsync.xml
-app/lib/flot/examples/zooming/_notes/dwsync.xml
-app/lib/jquery/_notes/dwsync.xml
-app/partials/controllers/_notes/dwsync.xml
-app/partials/directives/_notes/dwsync.xml
+dwsync.xml
